# artcat

./: Cargo.toml  readme.md
.github/workflows/: ci.yml  rust.yml
examples/: basic_master.rs
examples/basic_master/: Cargo.toml
examples/basic_master/src/: basic_master.rs  benchmark.rs  echo.rs  main.rs
examples/basic_slave/: Cargo.toml
examples/basic_slave/src/: echo.rs  main.rs
master/: Cargo.toml
master/examples/: basic.rs
master/tests/: performance.rs  single.rs
slave/: Cargo.toml
slave/examples/: basic.rs
slave/src/: main.rs
src/: command.rs  lib.rs  master.rs  mutex.rs  registers.rs  slave.rs  utils.rs
src/master/: accessing.rs  mapping.rs  mod.rs  networking.rs
