[package]
name = "uartcat"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
heapless = "^0.9"
bilge = "^0.3"
packbytes = { version="^0.2", features = ['packbytes-derive'], default-features=false }

serial2-tokio = { version="^0.1", optional = true }
tokio = { version="^1.48", features = ['io-util'], optional = true }
embedded-io-async = { version = "^0.7", optional = true }
thiserror = { version="^2.0", optional = true }
rand = { version = "^0.9", optional = true }

[features]
std = []
master = ["std", "dep:serial2-tokio", "dep:tokio", "dep:thiserror", "dep:rand"]
slave = ["dep:embedded-io-async"]
