[package]
name = "master-suite"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-concurrency = { version = "^7.6", default-features=false }
tokio = { version="^1.48", features = ["io-util", "time", "rt-multi-thread", "macros"] }
packbytes = "^0.2"
pretty_env_logger = "^0.5"

uartcat = { version = "0.1", features = ['master'], path = ".." }
