[package]
name = "basic_master"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "basic_master"
path = "src/basic_master.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[dependencies]
futures-concurrency = { version = "^7.6", default-features=false }
tokio = { version="^1.48", features = ["io-util", "time", "rt-multi-thread", "macros"] }
packbytes = "^0.2"
pretty_env_logger = "^0.5"
artcat = { version = "0.1", features = ['master'], path = "../.." }

# just for echo.rs
serial2-tokio = { version="^0.1" }
